--- a/config/locales/groups.yml
+++ b/config/locales/groups.yml
@@ -1,7 +1,7 @@
 en:
   groups: 
     short: Groups
-    right: In many ways Villa Taika is well suited to accomodate courses and other group happenings.<br><br>
+    right: In many ways Villa Taika is well suited to accomodate courses and other group happenings.<br/><br/>
           <ul> 
             <li> large group room</li>
             <li> large garden</li>
@@ -15,19 +15,19 @@ en:
           </ul>
     bottom: 
       Our beautifully decorated group space has a good size to allow many activities with enough space, be it
-      yoga, dancing, body work or other group work. <br>
-      Our garden is large and open, and well suited for quiet activities . <br>
+      yoga, dancing, body work or other group work. <br/>
+      Our garden is large and open, and well suited for quiet activities . <br/>
       The group space is also well equipped with a high quality steoro system and a video projector is 
-      available if needed. <br>
-      For quiet group work we have blankets and sitting cousions for participants. <br>
-      During courses it is possible to use our large, wood heated sauna, and our small pool. <br>
+      available if needed. <br/>
+      For quiet group work we have blankets and sitting cousions for participants. <br/>
+      During courses it is possible to use our large, wood heated sauna, and our small pool. <br/>
       On the courses we can accomodate 25 people comfortably in our 8 rooms, but up to 30 is possible using
-      extra beds, and we also have a seperate room for the teacher<br>
+      extra beds, and we also have a seperate room for the teacher<br/>
       There are many local activities for groups that are not courses, see our <a href="/en/activities.html">activities
-      page</a>. <br>
-      We offer vegetarian or vegan food, prepared with love. <br>
+      page</a>. <br/>
+      We offer vegetarian or vegan food, prepared with love. <br/>
       Prices and details subject to negotiation. Full board prices with use of group room and sauna range 
-      from 50-65€, with prices depending on group size and food requirements. <br> <br>
+      from 50-65€, with prices depending on group size and food requirements. <br/> <br/>
 fi:
   groups: 
     short: Ryhmille
@@ -43,14 +43,14 @@ fi:
             <li>opettajalle oma huone</li>
             <li>kasvisruoka</li>
            </ul>
-    bottom:       Ryhmätila on 75 m2. Kauniisti sisustettu ryhmätilamme sopii joogaan, tanssiin, kehotyöskentelyyn etc.  <br>
-          Voimme majoittaa 25 ihmistä mukavasti 8:aan huoneeseemme, mutta tarvittaessa 30 mahtuu lisävuoteisiimme.<br>
-          Ryhmätilaa on mahdollista käyttää myös majoitukseen.<br>
-          ryhmätilassa on korkealuokkaiset äänentoisto laitteet ja videotykki tarvittaessa.<br>
-          Tarjoamme täysipainoista kasvisruokaa, joka on valmistettu rakkaudella..<br>
-          Pihamme on iso ja avoin. Sitä voi käyttää hiljaisiin ryhmäharjoituksiin.<br>
-          Kurssin aikana on mahdollista saunoa puulämmitteisessä saunassamme.<br>
-          Hinnasta ja yksityiskohdista voimme neuvotella. Täysihoito on 50-65€, riippuen ryhmän koosta ja ruokatoiveista.<br>
+    bottom:       Ryhmätila on 75 m2. Kauniisti sisustettu ryhmätilamme sopii joogaan, tanssiin, kehotyöskentelyyn etc.  <br/>
+          Voimme majoittaa 25 ihmistä mukavasti 8:aan huoneeseemme, mutta tarvittaessa 30 mahtuu lisävuoteisiimme.<br/>
+          Ryhmätilaa on mahdollista käyttää myös majoitukseen.<br/>
+          ryhmätilassa on korkealuokkaiset äänentoisto laitteet ja videotykki tarvittaessa.<br/>
+          Tarjoamme täysipainoista kasvisruokaa, joka on valmistettu rakkaudella..<br/>
+          Pihamme on iso ja avoin. Sitä voi käyttää hiljaisiin ryhmäharjoituksiin.<br/>
+          Kurssin aikana on mahdollista saunoa puulämmitteisessä saunassamme.<br/>
+          Hinnasta ja yksityiskohdista voimme neuvotella. Täysihoito on 50-65€, riippuen ryhmän koosta ja ruokatoiveista.<br/>
     
           Talomme sijaitsee erittäin luonnonkauniissa ympäristössä. 
           Kävelymatkan päässä on 5 eri järveä ja luonnonsuojelualue. 
@@ -58,7 +58,7 @@ fi:
 de:
   groups: 
     short: Groups
-    right: In many ways Villa Taika is well suited to accomodate courses and other group happenings.<br><br>
+    right: In many ways Villa Taika is well suited to accomodate courses and other group happenings.<br/><br/>
           <ul> 
             <li> large group room</li>
             <li> large garden</li>
@@ -72,19 +72,19 @@ de:
           </ul>
     bottom: 
       Our beautifully decorated group space has a good size to allow many activities with enough space, be it
-      yoga, dancing, body work or other group work. <br>
-      Our garden is large and open, and well suited for quiet activities . <br>
+      yoga, dancing, body work or other group work. <br/>
+      Our garden is large and open, and well suited for quiet activities . <br/>
       The group space is also well equipped with a high quality steoro system and a video projector is 
-      available if needed. <br>
-      For quiet group work we have blankets and sitting cousions for participants. <br>
-      During courses it is possible to use our large, wood heated sauna, and our small pool. <br>
+      available if needed. <br/>
+      For quiet group work we have blankets and sitting cousions for participants. <br/>
+      During courses it is possible to use our large, wood heated sauna, and our small pool. <br/>
       On the courses we can accomodate 25 people comfortably in our 8 rooms, but up to 30 is possible using
-      extra beds, and we also have a seperate room for the teacher<br>
+      extra beds, and we also have a seperate room for the teacher<br/>
       There are many local activities for groups that are not courses, see our <a href="/en/activities.html">activities
-      page</a>. <br>
-      We offer vegetarian or vegan food, prepared with love. <br>
+      page</a>. <br/>
+      We offer vegetarian or vegan food, prepared with love. <br/>
       Prices and details subject to negotiation. Full board prices with use of group room and sauna range 
-      from 50-65€, with prices depending on group size and food requirements. <br> <br>
+      from 50-65€, with prices depending on group size and food requirements. <br/> <br/>
 se:
   groups: 
     short: Ryhmille
@@ -100,14 +100,14 @@ se:
             <li>opettajalle oma huone</li>
             <li>kasvisruoka</li>
            </ul>
-    bottom:       Ryhmätila on 75 m2. Kauniisti sisustettu ryhmätilamme sopii joogaan, tanssiin, kehotyöskentelyyn etc.  <br>
-          Voimme majoittaa 25 ihmistä mukavasti 8:aan huoneeseemme, mutta tarvittaessa 30 mahtuu lisävuoteisiimme.<br>
-          Ryhmätilaa on mahdollista käyttää myös majoitukseen.<br>
-          ryhmätilassa on korkealuokkaiset äänentoisto laitteet ja videotykki tarvittaessa.<br>
-          Tarjoamme täysipainoista kasvisruokaa, joka on valmistettu rakkaudella..<br>
-          Pihamme on iso ja avoin. Sitä voi käyttää hiljaisiin ryhmäharjoituksiin.<br>
-          Kurssin aikana on mahdollista saunoa puulämmitteisessä saunassamme.<br>
-          Hinnasta ja yksityiskohdista voimme neuvotella. Täysihoito on 50-65€, riippuen ryhmän koosta ja ruokatoiveista.<br>
+    bottom:       Ryhmätila on 75 m2. Kauniisti sisustettu ryhmätilamme sopii joogaan, tanssiin, kehotyöskentelyyn etc.  <br/>
+          Voimme majoittaa 25 ihmistä mukavasti 8:aan huoneeseemme, mutta tarvittaessa 30 mahtuu lisävuoteisiimme.<br/>
+          Ryhmätilaa on mahdollista käyttää myös majoitukseen.<br/>
+          ryhmätilassa on korkealuokkaiset äänentoisto laitteet ja videotykki tarvittaessa.<br/>
+          Tarjoamme täysipainoista kasvisruokaa, joka on valmistettu rakkaudella..<br/>
+          Pihamme on iso ja avoin. Sitä voi käyttää hiljaisiin ryhmäharjoituksiin.<br/>
+          Kurssin aikana on mahdollista saunoa puulämmitteisessä saunassamme.<br/>
+          Hinnasta ja yksityiskohdista voimme neuvotella. Täysihoito on 50-65€, riippuen ryhmän koosta ja ruokatoiveista.<br/>
     
           Talomme sijaitsee erittäin luonnonkauniissa ympäristössä. 
           Kävelymatkan päässä on 5 eri järveä ja luonnonsuojelualue. 
