--- a/config/locales/groups.yml
+++ b/config/locales/groups.yml
@@ -33,15 +33,15 @@ fi:
     short: Ryhmille
     right: 
            <ul> 
-            <li>iso ryhmätila</li>
+            <li> iso ryhmätila</li>
             <li> iso puutarha</li>
             <li> korkealuokkaiset äänentoisto laitteet</li>
             <li> videotykki</li>
-            <li istuintyynyjä ja peittoja salissa</li>
+            <li> istuintyynyjä ja peittoja salissa</li>
             <li> puulämmitteinen sauna</li>
-            <li>  majoitus 20-30 hlö</li>
-            <li>opettajalle oma huone</li>
-            <li>kasvisruoka</li>
+            <li> majoitus 20-30 hlö </li>
+            <li> opettajalle oma huone</li>
+            <li> kasvisruoka</li>
            </ul>
     bottom:       Ryhmätila on 75 m2. Kauniisti sisustettu ryhmätilamme sopii joogaan, tanssiin, kehotyöskentelyyn etc.  <br/>
           Voimme majoittaa 25 ihmistä mukavasti 8:aan huoneeseemme, mutta tarvittaessa 30 mahtuu lisävuoteisiimme.<br/>
