--- a/config/locales/general.yml
+++ b/config/locales/general.yml
@@ -35,23 +35,23 @@ fi:
       text:   on kaunis ja viehättävä Bed&Breakfast -paikka sekä 
                 kurssikeskus Antskogissa, 4,5 km Fiskarsista Karjalohjalle päin. 
 de:
-    tai: or
-    puh: tel
-    myos: See also
-    slogan: asian elegance
+    tai: oder
+    puh: Tel
+    myos: Siehe auch
+    slogan: Asatische eleganz
     suites: 
-      short: Suites (w.shower)
+      short: Suites (mit Dusche)
     deluxe: 
-      short: Deluxe (w.toilet)
+      short: Deluxe (mit Toilette)
     standard: 
       short: Standard (shared)
     photos:
       short: Photos
     index:
       short: Home
-      bold: Asian elegance in the beauty of natural surroundings.
-      text:  is a charming Bed&Breakfast  and 
-                course-center in Antskog, near Fiskars, just one hours drive from Helsinki. 
+      bold: Asiatische eleganz inmiten unberührter Natur.
+      text:  ist ein charmantes Bed&Breakfast in Antskog, nahe Fiskars, knapp über eine Autostunde 
+            von Helsinki entfernt. 
 se:
     tai: tai
     puh: puh
