--- a/config/locales/map.yml
+++ b/config/locales/map.yml
@@ -14,11 +14,12 @@ fi:
     four: Talon molemmilta puolilta näkyy läheiset järvet. Ympärillä on kauniit kävelymaastot.
 de:
   map: 
-    short: Map
-    one:  <b>Villa Taika</b>  is located in Antskog 4km north of Fiskars  to the direction of Karjalohja (north). 
-    two: Villa Taika is an old , white local school house next to the main road through Antskog.
-    three: Coming from Fiskars it is the third house on the right in the Antskog village.
-    four: We have lakeview from both sides of the house, and there is beautiful nature around for walks.
+    short: Karte
+    one:  <b>Villa Taika</b>  befindet sich in dem Dorf Antskog, 4km nördlich von Fiskars, ca 100km west von 
+          Helsinki. 
+    two: Villa Taika ist ein grosses weisses Haus auf einem kleinen Hügel, direkt an der Stasse durch Antskog.
+    three: Von Fiskars kommend ist Villa Taika das <em>dritte</em> Haus auf der rechten Seite.
+    four: Direkt vom Haus kann man zwei Seen sehen, und die Natur lädt zum Spazierengehen ein. 
 se:
   map: 
     short: Kartta
