--- a/config/locales/photos.yml
+++ b/config/locales/photos.yml
@@ -26,15 +26,15 @@ fi:
 de:
   photos: 
     w_pavillion: Pavillion
-    w_kukkat: Flowers in Garden
-    w_piha: Garden in Summer
-    w_frogs: Dancing frogs
-    w_peony: Fountain in the garden
-    w_terasse: Garden terasse
-    h_aurinko_wc: Aurinko wc
-    h_curves: Aurinko carvings
-    h_lootus_wc: Lotus suite toilet
-    h_highview: Villa Taika from above
+    w_kukkat: Blumen im Garten
+    w_piha: Garten im Sommer
+    w_frogs: Tanzende Frösche
+    w_peony: Brunnen im Garten
+    w_terasse: Terasse im Garten
+    h_aurinko_wc: Sonnen-Suite
+    h_curves: Sonnen-Suite
+    h_lootus_wc: Lotus suite 
+    h_highview: Villa Taika von hoch oben
 se:
   photos: 
     w_pavillion: Pavillion
