--- a/config/locales/fi_rooms.yml
+++ b/config/locales/fi_rooms.yml
@@ -74,7 +74,7 @@ fi:
           Hinta on 90€ /2hh ja 75€ /1hh
   ametist:
     short: Ametisti huone
-    full: <b>Ametisti huone </b>on valoisa ja kaunis 15m² huone. Huonetta koristaa käsinkaiverrettu reliefi ja uniikki käsinmaalattu kaappi. <br/> Siellä on parisänky ja sinne mahtuu tarvittaessa lisävuode.
+    full: <b>Ametisti huone </b>on valoisa ja kaunis huone. Huonetta koristaa käsinkaiverrettu reliefi ja uniikki käsinmaalattu kaappi. <br/> Siellä on parisänky ja sinne mahtuu tarvittaessa lisävuode.
           Huoneessa on oma wc ja suihku.<br/>
            Hinta on 85€ /2hh ja 70€/ 1hh
   
